# raddd_dx7_stack

./: .env  .gitignore  Makefile  README.md  pyproject.toml
raddd/: __init__.py
raddd_dbt/: dbt_project.yml  profiles.yml
raddd_dbt/models/: 4_beat_phrases.sql  render_midis.py
